--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,7 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_RELEASE_STORE_FILE=android.jks
+MYAPP_RELEASE_KEY_ALIAS=giorodri0584
+MYAPP_RELEASE_STORE_PASSWORD=G1omar0584@
+MYAPP_RELEASE_KEY_PASSWORD=G1omar0584@
